<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ot_toolbar"
        android:layout_width="match_parent"
        android:background="@drawable/bck_app"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Other Services"
        app:titleTextColor="@color/white"
        style="@style/bold_tx"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/ot_toolbar"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="13dp"
        android:paddingBottom="10pt"
        android:paddingTop="20dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            android:textColor="@color/blue1"
            android:textSize="8pt"
            android:layout_marginLeft="10dp"
            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_services_content"
        android:textColor="@color/blue1"
        android:layout_marginTop="5dp"
        android:textSize="8pt"
        android:layout_marginLeft="10dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Customer can inform us their requirements"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/tc_problem"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="3dp"
            android:hint="Enter requirement"
            android:textColorHint="@color/light_grey"
            android:paddingEnd="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:padding="2dp"
            android:paddingStart="3dp"
            android:paddingLeft="24dp"
            android:drawablePadding="10dp"
            android:autoLink="none"
            android:textAlignment="textStart"
            android:inputType="textMultiLine"
            android:autoText="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talk_customer"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:layout_marginLeft="10dp"
            android:drawableRight="@drawable/ic_call"
            android:paddingEnd="10dp"
            />

        <Button
            android:id="@+id/other_submit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/button"
            android:layout_marginTop="8pt"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="8pt"
            style="@style/bold_tx"
            />


    </LinearLayout>
    </ScrollView>

</RelativeLayout>