<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/phh_toolbar"
        android:layout_width="match_parent"
        android:background="@drawable/bck_app"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Photographer"
        app:titleTextColor="@color/white"
        style="@style/bold_tx"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@+id/phh_toolbar"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="13dp"
        android:paddingBottom="10pt"
        android:paddingTop="20dp"
        >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textColor="@color/blue1"
        android:textSize="8pt"
        android:layout_marginLeft="10dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greetings_sir"
            android:textColor="@color/blue1"
            android:layout_marginTop="5dp"
            android:textSize="8pt"
            android:layout_marginLeft="10dp"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:background="@color/blue1"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10pt"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price : "
            android:textColor="@color/black"
            android:textSize="9pt"
            android:layout_marginLeft="10dp"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INR 12000"
                android:textColor="@color/black"
                android:textSize="10pt"
                style="@style/bold_tx"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:background="@color/blue1"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10pt"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type : "
                android:textColor="@color/black"
                android:textSize="9pt"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Outdoor"
                android:textColor="@color/black"
                android:textSize="10pt"
                style="@style/bold_tx"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:background="@color/blue1"
            android:layout_marginTop="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10pt"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time : "
                android:textColor="@color/black"
                android:textSize="9pt"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9:00 AM Till 2:00 PM"
                android:textColor="@color/black"
                android:textSize="10pt"
                style="@style/bold_tx"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:background="@color/blue1"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_confirm"
            android:textColor="@color/grey"
            android:textSize="8pt"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textAlignment="center"
            />


        <Button
            android:id="@+id/buttn_bookphh"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/button"
            android:layout_marginTop="15dp"
            android:text="Book Now"
            android:textColor="@color/white"
            android:textSize="8pt"
            style="@style/bold_tx"
            />

    </LinearLayout>
    </ScrollView>

</RelativeLayout>